<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.windsordesignstudio.notekeeper.NoteActivity"
    tools:showIn="@layout/activity_note">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:max="3"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/sp_course_select"
        app:layout_constraintStart_toStartOf="@+id/sp_course_select"/>

    <Spinner
        android:id="@+id/sp_course_select"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:nextFocusRight="@+id/et_note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"/>

    <EditText
        android:id="@+id/et_note_title"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/note_title"
        android:nextFocusRight="@+id/et_note_body"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/sp_course_select"
        app:layout_constraintStart_toStartOf="@+id/sp_course_select"
        app:layout_constraintTop_toBottomOf="@+id/sp_course_select"/>

    <EditText
        android:id="@+id/et_note_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/note_body"
        android:inputType="textMultiLine"
        android:nextFocusRight="@+id/module_status"
        app:layout_constraintEnd_toEndOf="@+id/et_note_title"
        app:layout_constraintStart_toStartOf="@+id/et_note_title"
        app:layout_constraintTop_toBottomOf="@+id/et_note_title"/>

    <view
        android:id="@+id/module_status"
        class="com.example.android.windsordesignstudio.notekeeper.ModuleStatusView"
        id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/et_note_body"
        app:layout_constraintStart_toStartOf="@+id/et_note_body"
        app:layout_constraintTop_toBottomOf="@+id/et_note_body"
        app:outlineColor="@color/pluralsightAccent"
        />


</android.support.constraint.ConstraintLayout>
