<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.example.android.windsordesignstudio.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="100"
        android:title="Cancel"/>
    <item
        android:id="@+id/action_previous"
        android:icon="@android:drawable/ic_media_rew"
        android:orderInCategory="101"
        android:title="previous"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_ff"
        android:orderInCategory="102"
        android:title="next"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="104"
        android:title="Send as email" />
    <item
        android:id="@+id/action_set_reminder"
        android:visible="true"
        android:orderInCategory="105"
        android:title="Set reminder"/>
</menu>
